--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "raycast-extension",
   "version": "1.0.0",
   "main": "arcade-session.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@raycast/api": "^1.78.1",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5"
   }
 }
