--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
       "icon": "hackclub.png"
     },
     {
-      "name": "startSession",
+      "name": "start-session",
       "title": "Start New Session",
       "description": "Start a new Arcade session",
       "mode": "view",
       "icon": "hackclub.png"
     },
     {
-      "name": "pauseSession",
+      "name": "pause-session",
       "title": "Pause/Resume Session",
       "description": "Pause your existing Arcade session",
       "mode": "no-view",
       "icon": "hackclub.png"
     },
     {
-      "name": "endSession",
+      "name": "end-session",
       "title": "End Session",
       "description": "End your existing Arcade session",
       "mode": "no-view",
