--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
       "title": "End Session",
       "description": "End your existing Arcade session",
       "mode": "no-view"
+    },
+    {
+      "name": "session-history",
+      "title": "View Session History",
+      "description": "View your Arcade session history",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -55,7 +61,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.78.1",
-    "@raycast/utils": "^1.15.0",
+    "@raycast/utils": "^1.16.2",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
