--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "dependencies": {
     "@raycast/api": "^1.78.1",
     "@raycast/utils": "^1.16.2",
+    "@slack/web-api": "^7.3.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
